Adding new fields and organizing them in the columns.

--- a/app/styles/weather.scss
+++ b/app/styles/weather.scss
@@ -3,10 +3,9 @@ body,html {
     color: white;
 }
 
-
 .weather-container {
-    background-color: rgba(8, 146, 232, 0.514);
+    background-color: rgb(89, 133, 174);
     color: white;
     border-radius: 10px;
-    border: solid 1px rgb(37, 151, 222) 0.514;
+    border: solid 1px rgb(255, 255, 255) 0.514;
 }
