--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -2,7 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-.weather-icon {height: 64px; width: 64px; border: none; margin: auto;}
+.weather-icon {height: 64px; width: 64px; margin: auto;}
+.category-icon {height: 64px; width: 64px; margin: auto; scale:calc(.5);}
+.temp-icon {height: 48px; width: 48px; margin: auto; scale:calc(.75);}
 
 
 /* Icons from https://github.com/visualcrossing/WeatherIcons/tree/main */
@@ -28,4 +30,6 @@
 .thunder-showers-night{background: url('../../public/weather-icons/thunder-showers-night.png');}
 .thunder{background: url('../../public/weather-icons/thunder.png');}
 .wind{background: url('../../public/weather-icons/wind.png');}
+.temperature{background: url('../../public/weather-icons/temperature.png');}
+
 
