--- a/app/styles/weather.scss
+++ b/app/styles/weather.scss
@@ -9,3 +9,27 @@ body,html {
     border-radius: 10px;
     border: solid 1px rgb(255, 255, 255) 0.514;
 }
+
+
+.search-container {
+    padding: .25rem;
+    width: 100%;
+    margin-top: 1rem;
+    border-radius: 5px;
+
+}
+.search-bar {
+    border-radius: 5px 0 0 5px;
+    color: black;
+    margin-right: 0;
+    margin-left:1rem;
+    padding: .5rem;
+}
+
+.search-button {
+    background-color: rgb(89, 133, 174);
+    margin-left: 0;
+    border-radius: 0 5px 5px 0;
+    padding: 8px 16px;
+
+}
