--- a/app/styles/weather.scss
+++ b/app/styles/weather.scss
@@ -33,3 +33,9 @@ body,html {
     padding: 8px 16px;
 
 }
+
+.alert-container{
+    background-color: rgb(217, 41, 41);
+    border-radius: 5px;
+    margin-bottom: 15px;
+}
