--- a/app/styles/weather.scss
+++ b/app/styles/weather.scss
@@ -39,3 +39,35 @@ body,html {
     border-radius: 5px;
     margin-bottom: 15px;
 }
+
+.station-map-icon {
+    background-color: #4285F4;
+    border-radius: 8px;
+    color: #FFFFFF;
+    font-size: 14px;
+    padding: 10px 15px;
+    position: relative;
+  }
+  
+  .station-map-icon::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 100%;
+    transform: translate(-50%, 0);
+    width: 0;
+    height: 0;
+    border-left: 8px solid transparent;
+    border-right: 8px solid transparent;
+    border-top: 8px solid #4285F4;
+  }
+
+  .station-info {
+    color: black;
+  }
+
+  .footer-text {
+    color: grey;
+    font-size: 12px;
+    margin-top: 2rem;
+  }
