--- a/app/styles/weather.scss
+++ b/app/styles/weather.scss
@@ -71,3 +71,17 @@ body,html {
     font-size: 12px;
     margin-top: 2rem;
   }
+
+  .dynamic-padding {
+    @media screen and (max-width: 640px) {
+      padding: 2rem;
+    }
+
+    @media screen and (max-width: 1280px) {
+      padding: 1rem;
+    }
+
+    @media screen and (min-width: 1280px) {
+      padding: 2rem;
+    }
+  }
